frameworks/backend/redis/content/operate/rs/8.0/references/rest-api/objects/crdb/database_config.md
---
type: "Framework Learn Page"
framework: "Redis"
source_repo: "https://github.com/redis/docs.git"
source_branch: "main"
source_path: "content/operate/rs/8.0/references/rest-api/objects/crdb/database_config.md"
source_commit: "f8693349287b0efbef3c865b6f6a2aceca88594d"
source_commit_short: "f869334"
source_commit_date: "2026-08-28T10:01:19-05:00"
generated_at: "2026-08-29T09:38:55.695462Z"
---
# Database_Config

---
Title: CRDB database config object
alwaysopen: false
categories:
- docs
- operate
- rs
description: An object that represents the database configuration
linkTitle: database_config
weight: $weight
url: '/operate/rs/8.0/references/rest-api/objects/crdb/database_config/'
---

An object that represents the database configuration. This configuration object is used in two contexts within CRDB objects:

- As `default_db_config` in the main [CRDB object]({{< relref "/operate/rs/8.0/references/rest-api/objects/crdb" >}}) for settings that apply to all instances. In most cases, instances should use the same configuration.

- As `db_config` in individual [instance objects]({{< relref "/operate/rs/8.0/references/rest-api/objects/crdb/instance_info" >}}) to override `default_db_config` or add configuration values for specific instances. Use `db_config` only when an instance needs different settings than the default configuration.

## `default_db_config` settings

### Requires `default_db_config`

Use `default_db_config` to set the following fields so they apply to every instance in the Active-Active database. Do not set these fields in `db_config` at the instance level because if they differ between instances, replication can fail to start, stop syncing, or return errors.

| Name | Type/Value | Description |
|------|------------|-------------|
| module_list | array of module objects | List of modules to be loaded to all participating clusters of the Active-Active database<br />{{<code>}}[{<br />  "module_id": string,<br />  "module_args": string,<br />  "module_name": string,<br />  "semantic_version": string,<br />}, ...]{{</code>}}<br />**module_id**: Module UID (deprecated; use `module_name` instead)<br />**module_args**: Module command-line arguments (pattern does not allow special characters &,\<,>,")<br />**module_name**: Module's name<br />**semantic_version**: Module's semantic version (deprecated; use `module_args` instead)<br /><br />**module_id** and **semantic_version** are optional as of Redis Software v7.4.2 and deprecated as of v7.8.2. |
| oss_sharding | boolean (default: false) | An alternative to `shard_key_regex` for using the common case of the OSS shard hashing policy |
| redis_version | string | Version of the redis-server processes used to create the Active-Active database, for example `7.4` |
| sharding | boolean (default:&nbsp;false) | Cluster mode (server-side sharding). When true, shard hashing rules must be provided by either `oss_sharding` or `shard_key_regex` |
| shard_key_regex | `[{ "regex": string }, ...]` | Custom keyname-based sharding rules (required if sharding is enabled)<br /><br />To use the default rules you should set the value to:<br />`[{"regex": ".*\\{(?<tag>.*)\\}.*"}, {"regex": "(?<tag>.*)"}]` |
| tls_mode | 'enabled'<br /> **'disabled'** <br />'replica_ssl' | Encrypt communication |

### Important to use `default_db_config`

The following fields don't break replication if they differ between instances, but mismatches can cause problems over time, such as uneven load, higher latency, or inconsistent behavior across clusters. Set them in `default_db_config` so they apply to every instance in the Active-Active database.

| Name | Type/Value | Description |
|------|------------|-------------|
| eviction_policy | **'noeviction'**<br />'allkeys-lru'<br />'allkeys-lfu'<br />'allkeys-random'<br />'volatile-lru'<br />'volatile-lfu'<br />'volatile-random'<br />'volatile-ttl' | Database memory eviction policy. See [eviction policy]({{< relref "/operate/rs/8.0/databases/memory-performance/eviction-policy" >}}) for more information. |
| memory_size | integer (default: 0) | Database memory size limit in bytes. 0 is unlimited. |
| oss_cluster | boolean (default: false) | Enables OSS Cluster mode |
| <span class="break-all">oss_cluster_api_preferred_ip_type</span> | 'internal'<br />'external' | Indicates preferred IP type in OSS cluster API |
| proxy_policy | 'single'<br />'all-master-shards'<br />'all-nodes' | The policy used for proxy binding to the endpoint |
| rack_aware | boolean (default: false) | Require the database to be always replicated across multiple racks |
| shards_count | integer (range: 1-512) (default: 1) | Number of database shards |
| shards_placement | 'dense'<br />'sparse' | Control the density of shards<br />Values:<br />**'dense'**: Shards reside on as few nodes as possible <br /> **'sparse'**: Shards reside on as many nodes as possible |

### Recommended `default_db_config`

The following fields don't break replication or cause future issues if they differ between instances. However, if there is no reason to use different values, you should use `default_db_config` to set them across all Active-Active database instances.

| Name | Type/Value | Description |
|------|------------|-------------|
| aof_policy | **'appendfsync-every-sec'** <br />'appendfsync-always' | Policy for Append-Only File data persistence |
| <span class="break-all">authentication_redis_pass</span> | string | Redis AUTH password (deprecated as of Redis Software v7.2, replaced with multiple passwords feature in version 6.0.X) |
| data_persistence | 'disabled'<br />'snapshot'<br />**'aof'** | Database on-disk persistence policy. For snapshot persistence, a [snapshot_policy]({{< relref "/operate/rs/8.0/references/rest-api/objects/bdb/snapshot_policy" >}}) must be provided |
| max_aof_file_size | integer | Maximum AOF file size in bytes |
| max_aof_load_time | integer (default: 3600) | Maximum AOF reload time in seconds |
| replication | boolean (default: true) | Database replication |
| <span class="break-all">replication_oom_threshold_percent</span> | integer (range: 0-20) (default: 5) | Reserved memory buffer percentage below `maxmemory` that blocks client writes while allowing Active-Active replication. Requires Redis database version 8.4 or later. See [Replication OOM protection]({{<relref "/operate/rs/8.0/databases/active-active/planning#replication-oom-protection">}}) for more information. |
| snapshot_policy | array of [snapshot_policy]({{< relref "/operate/rs/8.0/references/rest-api/objects/bdb/snapshot_policy" >}}) objects | Policy for snapshot-based data persistence. A dataset snapshot will be taken every N secs if there are at least M writes changes in the dataset. |

## Per-instance `db_config` settings

Set the following fields in an individual [instance]({{<relref "/operate/rs/8.0/references/rest-api/objects/crdb/instance_info">}})'s `db_config` because they are specific to that cluster's environment.

| Name | Type/Value | Description |
|------|------------|-------------|
| <span class="break-all">authentication_admin_pass</span> | string | Administrative databases access token |
| <span class="break-all">authentication_ssl_client_certs</span> | array | List of authorized client certificates. For Active-Active databases, it is strongly advised to configure the client certificates individually for each instance instead of using the default database configuration, even if the same certificate is used across all instances.<br />{{<code>}}[{<br />  "client_cert": string<br />}, ...]{{</code>}}<br />**client_cert**: X.509 PEM (Base64) encoded certificate |
| cert | string | Optional PEM-encoded server certificate for the underlying database instance |
| <span class="break-all">enforce_client_authentication</span> | **'enabled'** <br />'disabled' | Require authentication of client certificates for SSL connections to the database. If enabled, a certificate should be provided in either <span class="break-all">`authentication_ssl_client_certs`</span> or <span class="break-all">`authentication_ssl_crdt_certs`</span> |
| <span class="break-all">mtls_allow_outdated_certs</span> | boolean (default: false) | An optional mTLS relaxation flag for certs verification |
| <span class="break-all">mtls_allow_weak_hashing</span> | boolean (default: false) | An optional mTLS relaxation flag for certs verification |
| port | integer | TCP port for database access |
| private_key | string | Optional PEM-encoded private key matching the certificate for the underlying database instance |
